--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,11 @@ stages:
              SourceFolder: '$(System.DefaultWorkingDirectory)/target/JavaLoginShowcase-1.0.0.war'
              Contents: '**'
              TargetFolder: '${tomcatHome}/webapps/'
-         - task: CmdLine@2
-           inputs:
-             script: |
-               sh "${tomcatHome}/bin/shutdown.sh"
-               sh "${tomcatHome}/bin/startup.sh"
+        #  - task: CmdLine@2
+        #    inputs:
+        #      script: |
+        #        sh "${tomcatHome}/bin/shutdown.sh"
+        #        sh "${tomcatHome}/bin/startup.sh"
    
 
  
