--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
              script: 'mvn clean package'
          - task: CopyFiles@2
            inputs:
-             SourceFolder: '$(System.DefaultWorkingDirectory)/target/JavaLoginShowcase-1.0.0.war'
+             SourceFolder: '$(System.DefaultWorkingDirectory)/target/'
              Contents: '**'
              TargetFolder: '{tomcatHome}\webapps'
          - task: CmdLine@2
