Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,13 @@ stages:
              SourceFolder: '$(System.DefaultWorkingDirectory)/target/'
              Contents: '*'
              TargetFolder: 'C:\apache-tomcat-9.0.93\webapps'
-         - task: CmdLine@2
+         - task: PowerShell@2
            inputs:
+             targetType: 'inline'
              script: |
-               sh "${tomcatHome}/bin/shutdown.sh"
-               sh "${tomcatHome}/bin/startup.sh"
+               cd C:\apache-tomcat-9.0.93\bin
+               .\shutdown.bat
+               .\startup.bat
    
 
  
