--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,9 @@ stages:
              SourceFolder: '$(System.DefaultWorkingDirectory)/target/'
              Contents: '*'
              TargetFolder: 'C:\apache-tomcat-9.0.93\webapps'
-         
+         - task: CmdLine@2
+           inputs:
+             script: |
+               cd C:\apache-tomcat-9.0.93\bin
+               shutdown.bat
+               start.bat
