Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,7 @@ stages:
            inputs:
              script: |
                cd C:\apache-tomcat-9.0.93\bin
-             
+         - task: CmdLine@2
+           inputs:
+              script: 'shutdown.bat'
+              workingDirectory: 'C:\apache-tomcat-9.0.93\bin'
