--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ stages:
          - task: CmdLine@2
            inputs:
              script: |
-               cd C:\apache-tomcat-9.0.93\bin
+               C:\apache-tomcat-9.0.93\bin\shutdown.bat
          - task: CmdLine@2
            inputs:
              script: 'shutdown.bat'
